@@ -871,10 +871,10 @@ class DirBrowser(wx.Panel, Mixin.Mixin):
         if not self.is_ok(item): return
         filename = self.get_node_filename(item)
         dir = common.getCurrentDir(filename)
-        import FindInFiles
-
-        dlg = FindInFiles.FindInFiles(self.mainframe, self.pref, dir)
-        dlg.Show()
+        p = self.mainframe.createFindInFilesWindow()
+        self.mainframe.panel.showPage(p)
+        page = self.mainframe.panel.getPage(p)
+        page.reset(dir)
 
     def OnDirCut(self, event):
         item = self.tree.GetSelection()
